--- a/examples/mcp/tsconfig.json
+++ b/examples/mcp/tsconfig.json
@@ -9,7 +9,7 @@
     "types": ["node"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",    "rootDir": "./src",
+    "moduleResolution": "Bundler",    "rootDir": "./src",
     "outDir": "./build",
     "composite": true
   },
