--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -77,4 +77,4 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run TypeScript type check
-        run: pnpm run type-check
+        run: pnpm run type-check:full
